# KameleonScan

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  MODERNIZATION_AUDIT.md  Makefile  README.md  SBOM.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml
doc/api/: openapi.yaml
kameleon/: README.md  __init__.py  core.py  requirements.txt
kameleon/ai/: engine.py
kameleon/ci/: integration.py
kameleon/compliance/: __init__.py
kameleon/http/: client.py
kameleon/ide/: plugin.py
kameleon/k8s/: scanner.py
kameleon/plugin/: manager.py
kameleon/scanner/: engine.py
kameleon/storage/: __init__.py
kameleon/supply_chain/: __init__.py
profiles/: modern_audit.pw3af
scripts/: migrate_py3.py  quickstart.sh  scan_examples.sh
w3af/core/controllers/: w3afCore.py
w3af/core/controllers/ci/nosetests_wrapper/: show-test-ids.py
w3af/core/controllers/core_helpers/: plugins.py  strategy.py  target.py
w3af/core/controllers/core_helpers/consumers/: bruteforce.py  crawl_infrastructure.py  seed.py
w3af/core/controllers/core_helpers/not_found/: generate_404.py
w3af/core/controllers/core_helpers/tests/: test_exception_handler.py  test_profiles.py
w3af/core/controllers/csp/: utils.py
w3af/core/controllers/dependency_check/: requirements.py
w3af/core/controllers/exception_handling/: helpers.py
w3af/core/controllers/misc/tests/: test_diff.py
w3af/core/controllers/output_manager/: manager.py
w3af/core/controllers/plugins/: plugin.py
w3af/core/controllers/profiling/: pytracemalloc.py
w3af/core/controllers/sca/: sca.py
w3af/core/controllers/sql_tools/: blind_sqli_response_diff.py
w3af/core/controllers/tests/pylint_plugins/: hashlib_fix.py
w3af/core/controllers/threads/: pool276.py  threadpool.py
w3af/core/controllers/threads/tests/: test_threadpool.py
w3af/core/controllers/w3afAgent/server/: w3afAgentServer.py
w3af/core/data/bloomfilter/tests/: generic_filter_test.py
w3af/core/data/constants/: common_words.py
w3af/core/data/constants/tests/: test_vulns.py
w3af/core/data/db/: dbms.py  disk_list.py  disk_set.py  history.py
w3af/core/data/db/tests/: serialization_perf.py  shelve_vs_sqlite3.py  test_cached_disk_dict.py  test_disk_dict.py  test_disk_list.py  test_disk_set.py  test_variant_db.py
w3af/core/data/dc/: headers.py  query_string.py  urlencoded_form.py
w3af/core/data/fuzzer/: form_filler.py
w3af/core/data/kb/: info.py  info_set.py
w3af/core/data/misc/: cached_queue.py  encoding.py  ordered_cached_queue.py  web_encodings.py  xml_bones.py
w3af/core/data/options/: preferences.py
w3af/core/data/parsers/: mp_document_parser.py  parser_cache.py
w3af/core/data/profile/: profile.py
w3af/core/data/request/: fuzzable_request.py  request_mixin.py
w3af/core/data/search_engines/: google.py
w3af/core/data/url/: HTTPResponse.py  director.py  extended_urllib.py  opener_settings.py
w3af/core/ui/console/: config.py  console_ui.py  exploit.py  help.py  plugins.py  rootMenu.py
w3af/core/ui/gui/: clusterTable.py  helpers.py  history.py  httpLogTab.py  main.py  pluginEditor.py  reqResViewer.py  scanrun.py
w3af/plugins/attack/: sqlmap.py  xpath.py
w3af/plugins/attack/db/: sqlmap_wrapper.py
w3af/plugins/audit/: blind_sqli.py  deserialization.py  eval.py  generic.py  graphql.py  idor.py  jwt.py  lfi.py  nosql.py  os_commanding.py  redos.py  response_splitting.py  rfi.py  shell_shock.py  ssi.py  ssrf.py  ssti.py
w3af/plugins/bruteforce/: form_auth.py
w3af/plugins/crawl/: content_negotiation.py  dir_file_bruter.py  open_api.py
w3af/plugins/crawl/pykto/: update_scan_db.py
w3af/plugins/crawl/wordpress_fingerprint/: generate_release_db.py
w3af/plugins/grep/: cdn_providers.py  clamav.py  html_comments.py
w3af/plugins/infrastructure/: afd.py  cloud_enum.py  find_vhosts.py  halberd.py  http_vs_https_dist.py  php_eggs.py
w3af/plugins/infrastructure/oHmap/: hmap.py
w3af/plugins/output/: console.py  json_file.py  sarif.py  xml_file.py
w3af/plugins/tests/: helper.py
w3af/plugins/tests/audit/: test_blind_sqli.py  test_csrf.py  test_file_upload.py  test_sqli.py  test_ssl_certificate.py  test_xpath.py
w3af/plugins/tests/bruteforce/: test_form_auth.py
w3af/plugins/tests/crawl/: test_web_spider.py
w3af/plugins/tests/grep/: test_analyze_cookies.py  test_content_sniffing.py  test_cross_domain_js.py  test_expect_ct.py  test_form_autocomplete.py  test_get_emails.py  test_meta_generator.py  test_meta_tags.py  test_serialized_object.py  test_strange_headers.py  test_strange_http_codes.py  test_strange_reason.py  test_strict_transport_security.py
w3af/plugins/tests/output/: test_xml_file.py
w3af/tests/: build-crawl-test.py  waitfor-test-dependencies.py
(+106 files in other folders)
