[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kameleonscan"
version = "2.0.0"
description = "Professional Web Application Security Scanner with AI-Powered Capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-2.0"}
authors = [
    {name = "KameleonScan Team", email = "info@kameleonscan.io"}
]
keywords = ["security", "web", "vulnerability-scanner", "pentest", "owasp", "ai", "devsecops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

[project.scripts]
kameleon = "kameleon.cli:main"
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

# Legacy v1.0 scripts (deprecated, for backward compatibility)
w3af = "w3af.core.ui.console.menu:start"
w3af-console = "w3af.core.ui.console.console_ui:main"
w3af-gui = "w3af.core.ui.gui.start:run"
w3af-api = "w3af.core.controllers.w3afAPI:start"

[tool.setuptools]
# Legacy v1.0 package (deprecated)
packages = ["w3af"]
# v2.0 package
kameleon_packages = ["kameleon"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["w3af"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 300