[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kameleonscan"
version = "2.0.0"
description = "Professional Web Application Security Scanner"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-2.0"}
authors = [{name = "KameleonScan Team", email = "info@kameleonscan.io"}]

[tool.setuptools]
packages = ["kameleon"]